WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248268
CVE-2023-23517
Type getter is not needed for internal ReadableStream sources
https://bugs.webkit.org/show_bug.cgi?id=248268
Summary
Type getter is not needed for internal ReadableStream sources
youenn fablet
Reported
2022-11-23 01:52:48 PST
Type getter is not needed for internal ReadableStream sources
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-11-23 01:53:01 PST
<
rdar://102338913
>
youenn fablet
Comment 2
2022-11-23 01:56:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6756
EWS
Comment 3
2022-11-28 00:45:01 PST
Committed
257063@main
(f44648f07471): <
https://commits.webkit.org/257063@main
> Reviewed commits have been landed. Closing PR #6756 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug