Cherry-pick 257063@main (f44648f07471). https://bugs.webkit.org/show_bug.cgi?id=248268

Type getter is not needed for internal ReadableStream sources
    https://bugs.webkit.org/show_bug.cgi?id=248268
    rdar://102338913

    Reviewed by Eric Carlson.

    Make ReadableStreamSource method privates.
    In ReadableStream, use @getters instead of private getters to allow getting private values from prototype.
    Covered by added test.

    * LayoutTests/http/wpt/fetch/fetch-stream-source-expected.txt: Added.
    * LayoutTests/http/wpt/fetch/fetch-stream-source.html: Added.
    * Source/WebCore/Modules/streams/ReadableStream.js:
    (initializeReadableStream):
    * Source/WebCore/Modules/streams/ReadableStreamSource.idl:
    * Source/WebCore/bindings/js/JSDOMOperationReturningPromise.h:
    (WebCore::IDLOperationReturningPromise::call):

    Canonical link: https://commits.webkit.org/257063@main